infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tix-expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tix-expiration
  template:
    metadata:
      labels:
        app: tix-expiration
    spec:
      containers:
        - name: tix-expiration
          image: vahramj/tix-expiration
