infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tix-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tix-auth
  template:
    metadata:
      labels:
        app: tix-auth
    spec:
      containers:
        - name: tix-auth
          image: vahramj/tix-auth
          # image: us.gcr.io/ticketing-dev-342023/auth
          # listing all env vars we want to have access to in this container
          # [if these env vars end up on the container,
          # how do they get placed on the nodejs process?]
---
apiVersion: v1
kind: Service
metadata:
  name: tix-auth-srv
spec:
  selector:
    app: tix-auth
  ports:
    - name: tix-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
