infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          args:
            # args are pairs of flags, e.g. -p and 4222, that we use to configure the image
            [
              '-p',
              '4222',
              '-m',
              '8222',
              # STAN keeps sending heartbeat check signals to see if the client is still alive
              # e.g. because we might have restarted it
              # hbi is how often STAN will send heartbeat requests to each of it's clients
              # i.t.c. once per 5 seconds
              '-hbi',
              '5s',
              # hbt is how long each client has to respond before STAN considers it failed
              '-hbt',
              '5s',
              # hbf is how many requests can fail before STAN considers the client dead
              # i.t.c. after client fails to respond to the 2nd heartbeat check, it's considered dead
              '-hbf',
              '2',
              # why doesn't this have it's pair
              '-SD',
              # cid stands for cluster id. That's what we feed to nats clients
              '-cid',
              'ticketing',
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
