infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tix-orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tix-orders
  template:
    metadata:
      labels:
        app: tix-orders
    spec:
      containers:
        - name: tix-orders
          image: vahramj/tix-orders
---
apiVersion: v1
kind: Service
metadata:
  name: tix-orders-srv
spec:
  selector:
    app: tix-orders
  ports:
    - name: tix-orders
      protocol: TCP
      port: 3000
      targetPort: 3000
