infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tix-payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tix-payments
  template:
    metadata:
      labels:
        app: tix-payments
    spec:
      containers:
        - name: tix-payments
          image: vahramj/tix-payments
---
apiVersion: v1
kind: Service
metadata:
  name: tix-payments-srv
spec:
  selector:
    app: tix-payments
  ports:
    - name: tix-payments
      protocol: TCP
      port: 3000
      targetPort: 3000
