infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tix-tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tix-tickets
  template:
    metadata:
      labels:
        app: tix-tickets
    spec:
      containers:
        - name: tix-tickets
          image: vahramj/tix-tickets
          # image: us.gcr.io/ticketing-dev-342023/auth
          # listing all env vars we want to have access to in this container
          # [if these env vars end up on the container,
          # how do they get placed on the nodejs process?]
---
apiVersion: v1
kind: Service
metadata:
  name: tix-tickets-srv
spec:
  selector:
    app: tix-tickets
  ports:
    - name: tix-tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
